2002-02-26  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/gda-postgres-provider.c (get_postgres_triggers):
	now gets only triggers, not constraints.
	* testing/client.c: added tests for aggregates and triggers.

2002-02-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config.c (gda_config_add_listener): we must call
	gconf_client_add_dir for the directories to be watched out.

	* libgda/gda-marshal.list: added VOID:POINTER,UINT.

2002-02-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-connection.h: #define GDA_CONNECTION_SCHEMA_TRIGGERS.

	* providers/postgres/gda-postgres-provider.c (get_postgres_triggers):
	support SCHEMA_TRIGGERS.
	(get_postgres_aggregates): support SCHEMA_AGGREGATES.

	* libgda/gda-parameter.[ch]:
	* libgda/gda-client.c:
	* libgda/gda-connection.c:
	* libgda/gda-server-connection.c:
	* report/gda-report-engine.c:
	* report/idl/GNOME_Database_Report.idl:
	* idl/GNOME_Database.idl: replaced ParameterList with
	Bonobo::PropertySet, since they are exactly the same.

2002-02-20  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-connection.h:
	* idl/GNOME_Database.idl: added SCHEMA_AGGREGATES.

2002-02-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* idl/GNOME_Database.idl: added more properties to the
	FieldAttributes struct.

	* libgda/gda-row.[ch] (gda_field_attributes_set_allow_null),
	(gda_field_attributes_get_allow_null), (gda_field_set_allow_null),
	(gda_field_get_allow_null): new functions.

2002-02-10  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0.8.103 version.

2002-02-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* idl/GNOME_Database.idl: added more FEATURE's, and added TRIGGERS
	schema.

	* providers/sqlite/gda-sqlite-provider.c
	(gda_sqlite_provider_supports):
	* providers/mysql/gda-mysql-provider.c (gda_mysql_provider_supports):
	* providers/postgres/gda-postgres-provider.c
	(gda_postgres_provider_supports): support FEATURE_SQL.

	* providers/odbc/gda-odbc-provider.c